2011-04-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c, data/filetype_extensions.conf:
   Revert 'Compiled' filetype group back to 'Programming' (couldn't
   agree on whether e.g. Java is a compiled language).
 * doc/geany.txt, doc/geany.html:
   Add section 'Filetype group membership'.
 * src/highlighting.c, doc/geany.txt, doc/geany.html,
   data/colorschemes/alt.conf:
   Read color scheme name and description for menu item label and
   tooltip (based on patch by Matthew Brush, thanks).


2011-04-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c, src/filetypes.h:
   Remove now unnecessary Custom filetype group.
 * src/filetypes.c:
   Move text markup languages into Markup filetype group.
   Move some programming language filetypes out of the Miscellaneous
   group.
   Fix filetype title for some languages.
   Don't use 'Languages' for Miscellaneous group label.
   These changes mostly proposed by Matthew Brush (thanks).
 * src/filetypes.c:
   Make custom filetype titles use 'source file' only if their group
   is Compiled or Script.
   Use 'source file' for reStructuredText title.


2011-04-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c, src/filetypes.h, src/main.c,
   data/filetype_extensions.conf:
   Make filetype group membership configurable using [Groups] in
   filetype_extensions.conf.
   Read filetype_extensions.conf when calling filetypes_init_types(),
   don't require doclist initialization.
 * src/filetypes.c:
   Change Programming Languages filetype group label -> Compiled
   Languages.
   Use 'source file' title for custom filetypes.
 * src/prefs.c, doc/geany.txt, doc/geany.html:
   Remove Preferences label warning about restarting after editing
   template data - this is no longer necessary.


2011-04-26  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/callbacks.c, src/document.c, src/document.h,