@@ -1,3 +1,10 @@
+2011-04-30  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/project.c:
+   Fix project patterns and make them visible (based on a patch
+   by Jiří Techet, thanks).
+
+
 2011-04-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/filetypes.c, data/filetype_extensions.conf:
